<resources>
    <string name="app_name">apoyoulineav2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Apoyo Proceso Universidad en Linea</string>
    <string name="nav_header_subtitle">Versión 1.0</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="designsabout_txt_title">Universidad en Linea</string>
    <string name="designsabout_txt_textversion">Versión</string>
    <string name="designsabout_txt_version">1.0</string>
    <string name="designsabout_txt_textlastupdate">Ultima actualización</string>
    <string name="designsabout_txt_lastupdate">Agosto 2023</string>
    <string name="about_txt_textahutor">Autor</string>
    <string name="about_txt_ahutor">Janeth Puc Maas</string>
    <string name="about_txt_textcompany">Compañia</string>
    <string name="about_txt_company">Soluciones Tecnológicas DenariusPak</string>
    <string name="designsabout_txt_about">Somos una empresa dedicada al desarrollo de software, enfocados en tecnologías web y móviles</string>
    <string name="about_txt_textprivacypolicies">Politica de Privacidad</string>
    <string name="about_txt_privacypolicies"></string>
    <string name="about_txt_title">Universidad en Linea</string>
    <string name="about_txt_subtitle">Universidad abierta y a distancia de México</string>
    <string name="about_txt_description">La Universidad Abierta y a Distancia de México es un órgano desconcentrado de la Secretaría de Educación Pública,
        que oferta educación superior en la modalidad abierta y a distancia.
    El registro como aspirantes de la Universidad en Linea está sujeto a que exista previamente una convocatoria disponible la cual, se publica oportunamente en el portal</string>
    <string name="about_txt_link">

    </string>
    <string name="about_txt_descriptiontwo">Esta aplicación tiene como finalidad apoyar con información y algunos tips para quien esté iniciando o requiera ingresar al proceso de selección a la
    universidad abierta y a distancia </string>
    <string name="containercareer_txt_sortone">Ciencias de la Salud, Biológicas y Ambientales</string>
    <string name="containercareer_txt_sorttwo">Ciencias Exactas, Ingeniería y Tecnología</string>
    <string name="containercareer_txt_sortthree">Ciencias Sociales y Administrativas</string>
    <string name="includecareer_txt_texttsu">Técnico Superior Universitario</string>
    <string name="includecareer_txt_tsu">Urgencias Médicas</string>
    <string name="includecareer_txt_textdegree">Licenciatura</string>
    <string name="includecareer_txt_DegreeOne">Ingeniería de Energías Renovables</string>
    <string name="includecareer_txt_Degreetwo">Ingeniería en Biotecnología</string>
    <string name="includecareer_txt_Degreethree">Gerencia de Servicios de Salud</string>
    <string name="includecareer_txt_Degreefour">Nutrición Aplicada</string>
    <string name="includecareer_txt_Degreefive">Promoción y Educación para la Salud</string>
    <string name="includecareer_txt_Degreesix">Seguridad Alimentaria</string>
    <string name="includecareer_txt_Degreeseven">Tecnología Ambiental</string>
    <string name="includecareertwo_txt_textdegree">Licenciatura</string>
    <string name="includecareertwo_txt_DegreeOne">Ingeniería en Desarrollo de Software</string>
    <string name="includecareertwo_txt_Degreetwo">Ingeniería en Logística y Transporte</string>
    <string name="includecareertwo_txt_Degreethree">Ingeniería en Telemática</string>
    <string name="includecareertwo_txt_Degreefour">Enseñanza de Matemáticas</string>
    <string name="includecareertwo_txt_Degreefive">Licenciatura en Ingeniería en Gestión Industrial</string>
    <string name="includecareertwo_txt_Degreesix">Matemáticas</string>
    <string name="includecareerthree_txt_textdegree">Licenciatura</string>
    <string name="includecareerthree_txt_DegreeOne">Administración de Empresas Turísticas</string>
    <string name="includecareerthree_txt_Degreetwo">Contaduria y Finanzas Públicas</string>
    <string name="includecareerthree_txt_Degreethree">Derecho</string>
    <string name="includecareerthree_txt_Degreefour">Mercadotecnia Internacional</string>
    <string name="includecareerthree_txt_Degreefive">Seguridad Pública</string>
    <string name="includecareerthree_txt_Degreesix">Administración y Gestión Pública</string>
    <string name="includecareerthree_txt_Degreeseven">Gestion y Administración de PyME</string>
    <string name="examtips_txt_tiptitle">Tips de examen</string>
    <string name="examtips_txt_tipone">Presentar el examen también lleva un proceso, de preferencia hazlo en un momento donde
    creas no se saturaria la plataforma y sobre todo donde no tengas que interrumpirlo</string>
    <string name="examtips_txt_tiptwo">La Universidad en Linea no proporciona guías de estudio como tal así que te recomendamos investigues y descargues
        guías de estudios para la universidad</string>
    <string name="examtips_txt_tipthree">Al elegir la carrera a la que quieres ingresar se te proporciona
        una lista de temas para que te des una idea de lo que se necesita estudiar, dependiendo de la carrera a la que quieras ingresar, son los temas que se te proporciona y es en los que deberías centrarte.</string>
    <string name="examtips_txt_tipfour">Dedicale tiempo para estudiar e investigar tus guías</string>
    <string name="examtips_txt_tipfive">Al momento de presentar el examen hazlo en un lugar tranquilo , ya que se requiere
    la mayor concentración. Además de que se necesita la mayor cobertura de internet</string>
    <string name="examtips_txt_six">En el examen tienen un tiempo definido para responder todo, así que concéntrate y si alguna
     pregunta o ejercicio no te sabes pasa a la siguiente, es mejor responder con seguridad y rapidez las que sepas y luego podrás
     regresar con las que se te dificultan
    </string>
    <string name="examtips_txt_seven">Es probable que durante el examen surjan complicaciones por fallos del sistema o de la plataforma, lee con cuidado los mensajes de alerta para
        poder regresar a tu examen, no te aturdas y sigue las instrucciones, ten a mano tus folios y contraseñas que se te
        proporcionan </string>
    <string name="examtips_txt_eigth">Antes de entrar a presentar el examen borra el historial de navegación, limpia cookies y cache. Evita abrir otras ventanas en tu navegador para evitar conflictos</string>
    <string name="detail_txt_importantrecommendation">Una súper recomendación es realizar todo el proceso en una computadora ya que en el móvil no
aparece toda la información y por el tamaño no logramos encontrar muchas cosas y la carga igual se hace más pesada en el móvil
</string>
    <string name="detail_txt_description">Llena tu solicitud de registro\nEn este proceso se elige la carrera a la que quieres ingresar y tu curp será de importancia para empezar el registro, además se requiere de un correo electrónico personal y activo.
        Al final del registro se te otorgara el folio como aspirante y de tu contraseña para poder acceder a la plataforma</string>
    <string name="detail_txt_recommendation1">Tendrás que subir a la plataforma de registro, en formato digital la siguiente documentación:\n-Certificado de bachillerato\n-Clave Única de Registro de Población (CURP)
    -Identificación oficial con fotografía y Comprobante de domicilio (no mayor a tres meses)</string>
    <string name="detail_txt_recommendation2">La documentación digital se recomienda tenerla en formato PDF (no especifican que tiene que ser pdf pero al momento de seguir el
        proceso si te piden estén en ese formato)</string>
    <string name="detail_txt_recommendation3">Al momento de subir la documentación revisar con calma que es correcto el que se está subiendo</string>
    <string name="detail_txt_recommendation4">Leer detenidamente todo el documento y lo que se requiera ya que en ocasiones no encontramos
        lo que necesitamos hacer y perdemos de vista opciones y botones </string>
    <string name="detailsteptwo_txt_description">Se debe responder una encuesta sociodemográfica. Esta es la segunda fase del proceso de registro para el examen una vez ya obteniendo tu folio como aspirante.
        Mismo que te servirá para poder acceder a este siguiente paso.
    Es una encuesta sobre el conocimiento que se tiene de temas específicos de la vida cotidiana y de temas de tecnología, que tanto se sabe de plataformas académicas,
        uso básico de computadoras y navegadores, bibliotecas virtuales etc</string>
    <string name="detailsteptwo_txt_importantrecommendation">Es importante disponer del tiempo cuando se realice la encuesta sociodemográfica ya que se da un tiempo específico</string>
    <string name="detailsteptwo_txt_recommendation1">Tienes que responder a todas las preguntas para poder cerrar el proceso, es decir, el sistema te indicara que te hace falta alguna pregunta por responder
        ya que no te dejara guardar las repuestas que ya tengas</string>
    <string name="detailsteptwo_txt_recommendation2">En caso de no concluir con el llenado de la encuesta sociodemográfica en el periodo señalado las y los aspirantes no podrán continuar en el proceso de admisión</string>
    <string name="detailsteptwo_txt_recommendation3"></string>
    <string name="detailsteptwo_txt_recommendation4"></string>
    <string name="detailstepthree_txt_description">Esta fase se refiere a la resolución del examen de admisión</string>
    <string name="detailstepthree_txt_importantrecommendation">Es importante disponer del tiempo cuando se realice este proceso ya que de igual manera se da un tiempo específico para reaizarlo</string>
    <string name="detailstepthree_txt_recommendation1">El Cuestionario único de habilidades, tiene preguntas y ejercicios dependiendo de la carrera que elijas, desde el principio
        se te brinda una lista de temas, prepárate lo necesario para poder ingresar</string>
    <string name="detailstepthree_txt_recommendation2">Responde rápidamente las preguntas que con seguridad sabes y deja para de ultimo las que se te compliquen, es mejor terminar con lo que es seguro se sabe y no perder el tiempo con lo que no, así podrás
        regresar y ya tomar el tiempo que resta para resolver las que se te dificultan</string>
    <string name="detailstepthree_txt_recommendation3">Algunas recomendaciones técnicas:\n-Realiza el cuestionario en una computadora\n-Elije un navegador seguro\n-Limpia la cache y
        el historial del navegador\n-No abras más ventanas que el del cuestionario</string>
    <string name="detailstepthree_txt_recommendation4"></string>
    <string name="detailstepfour_txt_description">Se requiere tomar un curso, en las fechas y horarios establecidos (revisar fechas y horarios específicos
    en la descarga de la convocatoria que proporciona la página)
    </string>
    <string name="detailstepfour_txt_importantrecommendation">Cabe mencionar que esta fase se volvió un excelente filtro para la selección de alumnos que tenían el perfil
        para quedarse en los estudios a distancia</string>
    <string name="detailstepfour_txt_recommendation1">En caso de no participar y acreditar en tiempo y forma en el curso las y
los aspirantes no podrán continuar en el proceso de admisión</string>
    <string name="detailstepfour_txt_recommendation2">Es parte de los puntos que contaran para ganarte un lugar</string>
</resources>